--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "node ./server.js",
     "dev": "nodemon ./server.js --ignore public/",
     "production": "NODE_ENV=production",
     "setup": "node ./setup/setup.js"
